Iniciada listagem de games

--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -12,4 +12,20 @@
 
 <ion-content>
 
+  <ion-list>
+    <ion-list-header>Games disponíveis</ion-list-header>
+
+    <ion-item *ngFor="let game of games">
+      <ion-avatar slot="start">
+        <img [src]="game.foto">
+      </ion-avatar>
+      <ion-label>
+        <h2>{{game.nome}}</h2>
+        <h3>Gênero: {{game.genero}}</h3>
+        <h3>Preço: {{game.preco}}</h3>
+        <h4>Lançamento: {{game.lancamento}}</h4>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
