--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -21,7 +21,7 @@
       </ion-item-options>
 
       <ion-item-options side="end">
-        <ion-item-option color="danger">
+        <ion-item-option color="danger" (click)="excluir(game)">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-item-option>
       </ion-item-options>
