Cadastro de games

--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -52,7 +52,7 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end">
-    <ion-fab-button>
+    <ion-fab-button [routerLink]="['/games-register']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
