Adicionado busy loader no projeto

--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -10,7 +10,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Games disponíveis</ion-list-header>
+    <ion-list-header>
+      Games disponíveis
+      <ion-spinner *ngIf="loading"></ion-spinner>
+    </ion-list-header>
 
     <ion-item-sliding *ngFor="let game of games">
 
