--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -14,44 +14,46 @@
       Games disponíveis
       <ion-spinner *ngIf="loading"></ion-spinner>
     </ion-list-header>
+    <div *ngIf="!loading">
+      <ion-item-sliding *ngFor="let game of games">
+        <ion-item-options side="start">
+          <ion-item-option
+            color="secondary"
+            [routerLink]="['/games-register', game.id]"
+          >
+            <ion-icon name="pencil" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
 
-    <ion-item-sliding *ngFor="let game of games">
+        <ion-item-options side="end">
+          <ion-item-option color="danger" (click)="confirmRemove(game)">
+            <ion-icon name="trash" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
 
-      <ion-item-options side="start">
-        <ion-item-option color="secondary" [routerLink]="['/games-register', game.id]">
-          <ion-icon name="pencil" slot="icon-only"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="confirmRemove(game)">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-
-      <ion-item>
-        <ion-avatar slot="start">
-          <img [src]="game.foto" />
-        </ion-avatar>
-        <ion-label>
-          <h2>{{game.nome}}</h2>
-          <h3>Gênero: <strong>{{game.genero | genero}}</strong></h3>
-          <h3>
-            Preço:
-            <ion-text color="danger">
-              <strong> {{game.preco | currency : 'R$ '}} </strong>
-            </ion-text>
-          </h3>
-          <small>
-            Lançamento:
-            <ion-text color="medium">
-              {{game.lancamento | date: 'dd/MM/yyyy'}}
-            </ion-text>
-          </small>
-        </ion-label>
-      </ion-item>
-
-    </ion-item-sliding>
+        <ion-item>
+          <ion-avatar slot="start">
+            <img [src]="game.foto" />
+          </ion-avatar>
+          <ion-label>
+            <h2>{{game.nome}}</h2>
+            <h3>Gênero: <strong>{{game.genero | genero}}</strong></h3>
+            <h3>
+              Preço:
+              <ion-text color="danger">
+                <strong> {{game.preco | currency : 'R$ '}} </strong>
+              </ion-text>
+            </h3>
+            <small>
+              Lançamento:
+              <ion-text color="medium">
+                {{game.lancamento | date: 'dd/MM/yyyy'}}
+              </ion-text>
+            </small>
+          </ion-label>
+        </ion-item>
+      </ion-item-sliding>
+    </div>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end">
