--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -15,13 +15,16 @@
       <ion-spinner *ngIf="loading"></ion-spinner>
     </ion-list-header>
     <div *ngIf="!loading">
-      <ion-item-sliding *ngFor="let game of games">
+      <ion-item-sliding #sliding *ngFor="let game of games">
         <ion-item-options side="start">
           <ion-item-option
             color="secondary"
             [routerLink]="['/games-register', game.id]"
           >
             <ion-icon name="pencil" slot="icon-only"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="tertiary">
+            <ion-icon name="star" slot="icon-only" (click)="addWishList(game);close(sliding);"></ion-icon>
           </ion-item-option>
         </ion-item-options>
 
