Adicionado recurso para remover games da lista de desejos

--- a/src/app/games/games-list/games-list.page.html
+++ b/src/app/games/games-list/games-list.page.html
@@ -12,7 +12,7 @@
   <ion-list>
     <ion-list-header>
       Games disponíveis
-      <ion-spinner *ngIf="loading"></ion-spinner>
+      <ion-spinner class="ion-margin-start" *ngIf="loading"></ion-spinner>
     </ion-list-header>
     <div *ngIf="!loading">
       <ion-item-sliding #sliding *ngFor="let game of games">
