--- a/src/app/platforms/platforms.page.html
+++ b/src/app/platforms/platforms.page.html
@@ -18,7 +18,7 @@
       <ion-thumbnail slot="start">
         <ion-img [src]="platform.logo"></ion-img>
       </ion-thumbnail>
-      <ion-label>{{platform.description}}</ion-label>
+      <ion-label>{{platform.descricao}}</ion-label>
     </ion-item>
   </ion-list>
 
